added other sites product link (temporary) and updated stars rating styles

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blissmart</title>
+    <script src="https://use.fontawesome.com/3572e2875e.js"></script>
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
@@ -29,7 +30,7 @@
             </div>
             <div class="menu-right">
                 <div class="cart-button"><img class="cart-image" src="./images/icons/cart.png" alt="cart"/></div>
-                <h3 class="login-button">Login</h3>
+                <a href="./Login-SignUp.html"><h3 class="login-button">Login</h3></a>
             </div>
         </div>
         <div class="container">
@@ -173,25 +174,11 @@
                                 <img class="product-image" src="./images/products/chair.jpg" alt="chair"/>
                             </div>
                             <h3 class="product-name">
-                                Caprica Armchair in Grey Colour
+                                <a target="blank" class="link" href="https://www.pepperfry.com/caprica-accent-chair-in-grey-colour-by-home-1762050.html">
+                                    Caprica Armchair in Grey Colour
+                                </a>
                             </h3>
-                            <ul class="stars">
-                                <li>
-                                    <img class="star" src="./images/icons/full-star.png">
-                                </li>
-                                <li>
-                                    <img class="star" src="./images/icons/full-star.png">
-                                </li>
-                                <li>
-                                    <img class="star" src="./images/icons/full-star.png">
-                                </li>
-                                <li>
-                                    <img class="star" src="./images/icons/full-star.png">
-                                </li>
-                                <li>
-                                    <img class="star" src="./images/icons/full-star.png">
-                                </li>
-                            </ul>
+                            <div class="stars"></div>
                             <h3 class="price">₹ 9,900 /-</h3>
                             <p class="desc">by @home</p>
                         </span>
@@ -202,25 +189,11 @@
                                 <img class="product-image" src="./images/products/book-case.jpg" alt="book-case"/>
                             </div>
                             <h3 class="product-name">
-                                Ichika Two Door Glass Book Case
+                                <a target="blank" class="link" href="https://www.pepperfry.com/ichika-two-door-glass-cabinet-in-walnut-finish-by-mintwud-1760855.html">
+                                    Ichika Two Door Glass Book Case
+                                </a>
                             </h3>
-                            <ul class="stars">
-                                <li>
-                                    <img class="star" src="./images/icons/full-star.png">
-                                </li>
-                                <li>
-                                    <img class="star" src="./images/icons/full-star.png">
-                                </li>
-                                <li>
-                                    <img class="star" src="./images/icons/full-star.png">
-                                </li>
-                                <li>
-                                    <img class="star" src="./images/icons/full-star.png">
-                                </li>
-                                <li>
-                                    <img class="star" src="./images/icons/full-star.png">
-                                </li>
-                            </ul>
+                            <div class="stars"></div>
                             <h3 class="price">₹ 19,999 /-</h3>
                             <p class="desc">Mintwud by blissmart</p>
                         </span>
@@ -231,25 +204,11 @@
                                 <img class="product-image" src="./images/products/oneplus.jpg" alt="one plus"/>
                             </div>
                             <h3 class="product-name">
-                                OnePlus 8T 5G (Lunar Silver, 8GB 128GB)
+                                <a target="blank" class="link" href="https://www.amazon.in/OnePlus-Mirror-Black-128GB-Storage/dp/B085J1PFYB">
+                                    OnePlus 8T 5G (Lunar Silver, 8GB 128GB)
+                                </a>
                             </h3>
-                            <ul class="stars">
-                                <li>
-                                    <img class="star" src="./images/icons/full-star.png">
-                                </li>
-                                <li>
-                                    <img class="star" src="./images/icons/full-star.png">
-                                </li>
-                                <li>
-                                    <img class="star" src="./images/icons/full-star.png">
-                                </li>
-                                <li>
-                                    <img class="star" src="./images/icons/full-star.png">
-                                </li>
-                                <li>
-                                    <img class="star" src="./images/icons/full-star.png">
-                                </li>
-                            </ul>
+                            <div class="stars"></div>
                             <h3 class="price">₹ 38,999 /-</h3>
                             <p class="desc">Sold by Rocket Kommerce LLP</p>
                         </span>
@@ -260,25 +219,11 @@
                                 <img class="product-image" src="./images/products/t-shirt.jpg" alt="t-shirt"/>
                             </div>
                             <h3 class="product-name">
-                                status mantra cotton half sleeves t-shirt for men
+                                <a target="blank" class="link" href="https://www.amazon.in/STATUS-MANTRA-Regular-Sleeves-Printed/dp/B096SLGH3H/ref=sr_1_1?dchild=1&qid=1628165181&refinements=p_89%3ASTATUS+MANTRA&s=apparel&sr=1-1">
+                                    status mantra cotton half sleeves t-shirt for men
+                                </a>
                             </h3>
-                            <ul class="stars">
-                                <li>
-                                    <img class="star" src="./images/icons/full-star.png">
-                                </li>
-                                <li>
-                                    <img class="star" src="./images/icons/full-star.png">
-                                </li>
-                                <li>
-                                    <img class="star" src="./images/icons/full-star.png">
-                                </li>
-                                <li>
-                                    <img class="star" src="./images/icons/full-star.png">
-                                </li>
-                                <li>
-                                    <img class="star" src="./images/icons/full-star.png">
-                                </li>
-                            </ul>
+                            <div class="stars"></div>
                             <h3 class="price">₹ 550 /-</h3>
                             <p class="desc">by status mantra store</p>
                         </span>
@@ -299,25 +244,11 @@
                                 <img class="product-image" src="./images/products/shoes.jpg" alt="shoes"/>
                             </div>
                             <h3 class="product-name">
-                                Agasi Men's Air Wonder Series shoes for daily use
+                                <a target="blank" class="link" href="https://www.amazon.in/AGASI-Sneakers-Walking-Running-Lightweight/dp/B099Z1WQPD/ref=sr_1_1?dchild=1&keywords=Agasi%2BMen%27s%2BAir%2BWonder%2BSeries%2Bshoes%2Bfor%2Bdaily%2Buse&qid=1628165387&sr=8-1&th=1">
+                                    Agasi Men's Air Wonder Series shoes for daily use
+                                </a>
                             </h3>
-                            <ul class="stars">
-                                <li>
-                                    <img class="star" src="./images/icons/full-star.png">
-                                </li>
-                                <li>
-                                    <img class="star" src="./images/icons/full-star.png">
-                                </li>
-                                <li>
-                                    <img class="star" src="./images/icons/full-star.png">
-                                </li>
-                                <li>
-                                    <img class="star" src="./images/icons/full-star.png">
-                                </li>
-                                <li>
-                                    <img class="star" src="./images/icons/full-star.png">
-                                </li>
-                            </ul>
+                            <div class="stars"></div>
                             <h3 class="price">₹ 489 /-</h3>
                             <p class="desc">by Agasi</p>
                         </span>
@@ -328,25 +259,11 @@
                                 <img class="product-image" src="./images/products/watch.jpg" alt="watch"/>
                             </div>
                             <h3 class="product-name">
-                                TIMEWEAR Digital Men's Watch
+                                <a target="blank" class="link" href="https://www.amazon.in/Timewear-Military-Analogue-Digital-Black/dp/B0799M45HN/ref=sr_1_1_sspa?dchild=1&keywords=TIMEWEAR+Digital+Men%27s+Watch&qid=1628165441&smid=A2IMXMX2I0MD9T&sr=8-1-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUEyRjYzQk5ENVBUT0JPJmVuY3J5cHRlZElkPUEwNDgzNjUyMURGVUE1Mlo5NzdOQiZlbmNyeXB0ZWRBZElkPUEwNjcxNDA2M1ZQQ1RVWEhLVFhJQyZ3aWRnZXROYW1lPXNwX2F0ZiZhY3Rpb249Y2xpY2tSZWRpcmVjdCZkb05vdExvZ0NsaWNrPXRydWU=">
+                                    TIMEWEAR Digital Men's Watch
+                                </a>
                             </h3>
-                            <ul class="stars">
-                                <li>
-                                    <img class="star" src="./images/icons/full-star.png">
-                                </li>
-                                <li>
-                                    <img class="star" src="./images/icons/full-star.png">
-                                </li>
-                                <li>
-                                    <img class="star" src="./images/icons/full-star.png">
-                                </li>
-                                <li>
-                                    <img class="star" src="./images/icons/full-star.png">
-                                </li>
-                                <li>
-                                    <img class="star" src="./images/icons/full-star.png">
-                                </li>
-                            </ul>
+                            <div class="stars"></div>
                             <h3 class="price">₹ 699 /-</h3>
                             <p class="desc">by TIMEWEAR & BEYOND</p>
                         </span>
@@ -357,25 +274,11 @@
                                 <img class="product-image" src="./images/products/sticker.jpg" alt="sticker"/>
                             </div>
                             <h3 class="product-name">
-                                Solimo PVC Vinyl Wall Sticker for Living Room
+                                <a target="blank" class="link" href="https://www.amazon.in/Amazon-Brand-Solimo-Sticker-Living/dp/B076V78GJ2/ref=sr_1_3_sspa?dchild=1&keywords=Solimo+PVC+Vinyl+Wall+Sticker+for+Living+Room&qid=1628165508&sr=8-3-spons&psc=1&spLa=ZW5jcnlwdGVkUXVhbGlmaWVyPUEzRjZHSFAzVFExTkpCJmVuY3J5cHRlZElkPUEwNTg0Nzk4MTg5TVVaODNVQVRETiZlbmNyeXB0ZWRBZElkPUEwMjY3OTgwNkFGMUxIQ1dIWTlLJndpZGdldE5hbWU9c3BfYXRmJmFjdGlvbj1jbGlja1JlZGlyZWN0JmRvTm90TG9nQ2xpY2s9dHJ1ZQ==">
+                                    Solimo PVC Vinyl Wall Sticker for Living Room
+                                </a>
                             </h3>
-                            <ul class="stars">
-                                <li>
-                                    <img class="star" src="./images/icons/full-star.png">
-                                </li>
-                                <li>
-                                    <img class="star" src="./images/icons/full-star.png">
-                                </li>
-                                <li>
-                                    <img class="star" src="./images/icons/full-star.png">
-                                </li>
-                                <li>
-                                    <img class="star" src="./images/icons/full-star.png">
-                                </li>
-                                <li>
-                                    <img class="star" src="./images/icons/full-star.png">
-                                </li>
-                            </ul>
+                            <div class="stars"></div>
                             <h3 class="price">₹ 219 /-</h3>
                             <p class="desc">Sold by cloudtail decor</p>
                         </span>
@@ -386,25 +289,11 @@
                                 <img class="product-image" src="./images/products/samsung.jpg" alt="samsung"/>
                             </div>
                             <h3 class="product-name">
-                                SAMSUNG Galaxy A71 (Prism Crush Black, 128 GB) (8 GB RAM)
+                                <a target="blank" class="link" href="https://www.flipkart.com/samsung-galaxy-a71-prism-crush-black-128-gb/p/itmef5c22a98030a?pid=MOBFZ4AJ2FZGJKCF&lid=LSTMOBFZ4AJ2FZGJKCFUX2MCM&marketplace=FLIPKART&q=SAMSUNG+Galaxy+A71+%28Prism+Crush+Black%2C+128+GB%29+%288+GB+RAM">
+                                    SAMSUNG Galaxy A71 (Prism Crush Black, 128 GB) (8 GB RAM)
+                                </a>
                             </h3>
-                            <ul class="stars">
-                                <li>
-                                    <img class="star" src="./images/icons/full-star.png">
-                                </li>
-                                <li>
-                                    <img class="star" src="./images/icons/full-star.png">
-                                </li>
-                                <li>
-                                    <img class="star" src="./images/icons/full-star.png">
-                                </li>
-                                <li>
-                                    <img class="star" src="./images/icons/full-star.png">
-                                </li>
-                                <li>
-                                    <img class="star" src="./images/icons/full-star.png">
-                                </li>
-                            </ul>
+                            <div class="stars"></div>
                             <h3 class="price">₹ 29,990 /-</h3>
                             <p class="desc">by mobile world</p>
                         </span>
